@@ -169,6 +169,7 @@ add_library(ant4c STATIC
             "${CMAKE_SOURCE_DIR}/shared_object.h"
             "${CMAKE_SOURCE_DIR}/sleep_unit.c"
             "${CMAKE_SOURCE_DIR}/sleep_unit.h"
+            "${CMAKE_SOURCE_DIR}/stdc_secure_api.h"
             "${CMAKE_SOURCE_DIR}/string_unit.c"
             "${CMAKE_SOURCE_DIR}/string_unit.h"
             "${CMAKE_SOURCE_DIR}/target.c"
@@ -227,6 +228,7 @@ list(APPEND SOURCES_OF_TESTS
             "${CMAKE_SOURCE_DIR}/tests_date_time.cpp"
             "${CMAKE_SOURCE_DIR}/tests_environment.cpp"
             "${CMAKE_SOURCE_DIR}/tests_exec.cpp"
+            "${CMAKE_SOURCE_DIR}/tests_exec.h"
             "${CMAKE_SOURCE_DIR}/tests_file_system.cpp"
             "${CMAKE_SOURCE_DIR}/tests_hash.cpp"
             "${CMAKE_SOURCE_DIR}/tests_interpreter.cpp"
