@@ -9941,7 +9941,122 @@ Approximate round trip times in milli-seconds:
       <output code="1258" return="1">
       </output-->
     </text_encoding_UTF8_from_code_page>
-  </TestTextEncoding>
+    <text_encoding_encode_UTF16>
+      <input></input>
+      <endian />
+      <expected_size>2</expected_size>
+      <output />
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input>55294</input>
+      <expected_size>2</expected_size>
+      <output>55294</output>
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input>55295</input>
+      <expected_size>2</expected_size>
+      <output>55295</output>
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input>55296</input>
+      <expected_size>2</expected_size>
+      <output>65533</output>
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input>57343</input>
+      <expected_size>2</expected_size>
+      <output>65533</output>
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input>57344</input>
+      <expected_size>2</expected_size>
+      <output>57344</output>
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input>57345</input>
+      <expected_size>2</expected_size>
+      <output>57345</output>
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input>1114110</input>
+      <expected_size>4</expected_size>
+      <output>56319</output>
+      <output>57342</output>
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input>1114111</input>
+      <expected_size>4</expected_size>
+      <output>56319</output>
+      <output>57343</output>
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input>1114112</input>
+      <expected_size>2</expected_size>
+      <output>65533</output>
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input></input>
+      <endian>1</endian>
+      <expected_size>2</expected_size>
+      <output />
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input>55294</input>
+      <endian>1</endian>
+      <expected_size>2</expected_size>
+      <output>65239</output>
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input>55295</input>
+      <endian>1</endian>
+      <expected_size>2</expected_size>
+      <output>65495</output>
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input>55296</input>
+      <endian>1</endian>
+      <expected_size>2</expected_size>
+      <output>65023</output>
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input>57343</input>
+      <endian>1</endian>
+      <expected_size>2</expected_size>
+      <output>65023</output>
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input>57344</input>
+      <endian>1</endian>
+      <expected_size>2</expected_size>
+      <output>224</output>
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input>57345</input>
+      <endian>1</endian>
+      <expected_size>2</expected_size>
+      <output>480</output>
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input>1114110</input>
+      <endian>1</endian>
+      <expected_size>4</expected_size>
+      <output>65499</output>
+      <output>65247</output>
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input>1114111</input>
+      <endian>1</endian>
+      <expected_size>4</expected_size>
+      <output>65499</output>
+      <output>65503</output>
+    </text_encoding_encode_UTF16>
+    <text_encoding_encode_UTF16>
+      <input>1114112</input>
+      <endian>1</endian>
+      <expected_size>2</expected_size>
+      <output>65023</output>
+    </text_encoding_encode_UTF16>
+</TestTextEncoding>
   <TestXml>
     <xml_get_tag_finish_pos>
       <input></input>
