@@ -1,0 +1,6 @@
+/*
+ * The MIT License (MIT)
+ *
+ * Copyright (c) 2021 https://github.com/TheVice/
+ *
+ */
