@@ -13,6 +13,8 @@ ant4c (YYYY.MM)
     target that do not have 'description'.
   * Added calculation of hash sums according to 'xxh32' and 'xxh64'
     algorithms.
+  * Fixed encoding to the UTF16BE and UTF16LE symbols that transforming
+    into surrogate pairs.
   * WIN32: fixed using at 'echo' task for scenario when output stream
     redirected to the file by capability of operation system -
     for example: 'ant4c.exe > 1.txt'.
